# seekonetools

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  conda_dependencies.yml  setup.cfg
src/: seekonetools.py
src/seekonetools/: __init__.py
src/seekonetools/rna/: __init__.py  basic_seurat.ipynb  cell_identify.R  chemistry.py  do_seurat.R  helper.py  report.py  step1.py  step2.py  step3.py  step4.py
src/seekonetools/rna/.ipynb_checkpoints/: basic_seurat-checkpoint.ipynb
src/seekonetools/rna/template/: base.html  base_bak.html  cells_part.html  marker_part.html  median_part.html  sample_part.html
src/seekonetools/utils/: __init__.py  _version.py  mkref.py  pipeline.py
