[metadata]
name = seekonetools
version = 1.0.0

[options]
packages = find:
package_dir =
    =src

python_requires = ==3.8.*

install_requires =
    dnaio==0.5.1
    xopen==1.1.0
    cutadapt==3.4
    click==8.0.1
    loguru==0.5.3
    matplotlib==3.1.3
    scipy==1.7.0
    pandas==1.2.4
    pysam==0.16.0.1


[options.entry_points]
console_scripts =
    seekonetools = seekonetools:cli

