[metadata]
name = seekonetools
version = 1.0.1
author = seekgenebio
author_email = tools@seekgene.com
url = https://github.com/seekgenebio/seekonetools
description = seekonetools is a tools
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = Linux

[options]
packages = find:
package_dir =
    =src

python_requires = ==3.8.*

install_requires =
    dnaio==0.5.1
    xopen==1.1.0
    cutadapt==3.4
    click==8.0.1
    jinja2==2.10.1
    loguru==0.5.3
    matplotlib==3.1.3
    scipy==1.7.0
    pandas==1.2.4
    pysam==0.16.0.1
    lzstring==1.0.4

include_package_data=True

[options.packages.find]
where = src

[options.package_data]
src/seekonetools/rna = 
    src/seekonetools/rna/*.R
src/seekonetools/rna/barcode = 
    src/seekonetools/rna/barcode/*
src/seekonetools/rna/template = 
    src/seekonetools/rna/template/*

[options.entry_points]
console_scripts =
    seekonetools = seekonetools:cli

